--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.17.13', '1.18.10', '1.19.5' ]
+        go-version: [ '1.17.13', '1.18.10', '1.19.5', '1.20' ]
 
     steps:
       - uses: actions/checkout@v3.3.0
@@ -40,7 +40,6 @@ jobs:
           go-version: 1.19.5
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v3.3.1
+        uses: golangci/golangci-lint-action@v3.4.0
         with:
           version: latest
-
