--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -17,11 +17,13 @@ jobs:
     strategy:
       matrix:
         go-version:
-          - 1.21.11
-          - 1.22.4
+          - 1.21.12
+          - 1.22.5
 
     steps:
-      - uses: actions/checkout@v4.1.6
+      - uses: actions/checkout@v4.1.7
+        with:
+          fetch-depth: 0
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5.0.1
         with:
@@ -43,11 +45,13 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4.1.6
+      - uses: actions/checkout@v4.1.7
+        with:
+          fetch-depth: 0
       - name: Setup Go
         uses: actions/setup-go@v5.0.1
         with:
-          go-version: 1.21.11
+          go-version: 1.21.12
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6.0.1
         with:
